[gd_scene load_steps=8 format=3 uid="uid://c6ywhebif4ijh"]

[ext_resource type="Script" path="res://npc/french_fry_guy/french_fry_guy.gd" id="1_m325l"]
[ext_resource type="Texture2D" uid="uid://du17ahk8tcsx4" path="res://npc/french_fry_guy/assets/french_fry_guy.png" id="1_u2c03"]
[ext_resource type="AudioStream" uid="uid://csdbi8j0m335f" path="res://npc/french_fry_guy/sounds/yayyy.ogg" id="3_ilw1c"]

[sub_resource type="Animation" id="Animation_ot8yf"]
resource_name = "fade_away"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.74902), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.25), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogPlayer:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ilw1c")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DialogPlayer:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -10.0, -20.0, -30.0, -40.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_286dn"]
_data = {
"fade_away": SubResource("Animation_ot8yf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8axwo"]
size = Vector2(12.193, 49.3363)

[sub_resource type="CircleShape2D" id="CircleShape2D_awq7i"]
radius = 82.0

[node name="npc2" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_m325l")
kickable = null

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.5, -7)
scale = Vector2(1.532, 1.5)
texture = ExtResource("1_u2c03")

[node name="GoalDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GoalDetector"]
polygon = PackedVector2Array(12, 11, -16, -31, -29, -35, -37, -21, -21, 4, 1, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_286dn")
}

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-12.4885, -5.66492)
rotation = -0.711428
shape = SubResource("RectangleShape2D_8axwo")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-12, -5)
shape = SubResource("CircleShape2D_awq7i")

[node name="DialogPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="GoalDetector" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
